syntax = "proto3";

package todo;

option go_package="learn-grpc/todo-list/proto";

message CreateTodoRequest {
    string title = 1;
}

message CreateTodoResponse {
    string id = 1;
}

service TodoService {
    rpc CreateTodo(CreateTodoRequest) returns (CreateTodoResponse) {};
};